--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
     </dependencyManagement>
 
     <build>
+        <finalName>cloud-service-center</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
